slurm/k8s_mega_v2/practice/4.secure-and-highlyavailable-apps/pdb/nginx/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
    - host: nginx.s<номер своего логина>.edu.slurm.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx
              port:
                number: 80
